<resources>
    <string name="app_name">SOSOKAN</string>
    <string name="facebook_app_id">1705306379718667</string>
    <string name="buddy_build_app_id">57b68e1c803c5601008c925f</string>
    <string name="buddy_build_access_token">V3DnH3GykYBj5WxAEYfDkFKorcJrLl4sFUrpqZc004JEnOQSbsCv7T9c7CX3262NAlnH2nodXfSvzk89ZfSSHayz8vlZLA2VPa0gxUy00VKrPBsPbMWbKh27KHXM</string>
    <string name="Skip">Skip</string>
    <string name="SignUp">Sign Up</string>
    <string name="ExamplePhoneCode">+ 1</string>
    <string name="VerifyByPhone">VERIFY BY PHONE</string>
    <string name="TypeYourPhoneNumber"> Type your phone number</string>
    <string name="Verify">VERIFY</string>
    <string name="LoginUsingFacebook">LOG IN USING FACEBOOK</string>
    <string name="LoginUsingWeChat">LOG IN USING WECHAT</string>
    <string name="Or">OR</string>
    <string name="read_full_des">READ FULL DESCRIPTION</string>
    <string name="availability">AVAILABILITY</string>
    <string name="phone">PHONE</string>
    <string name="fax">FAX</string>
    <string name="email">EMAIL</string>
    <string name="web">WEB</string>
    <string name="comments">COMMENTS</string>
    <string name="tap_to_edit">TAP TO EDIT PHOTO</string>
    <string name="title">TITLE</string>
    <string name="discount">DISCOUNT</string>
    <string name="description">DESCRIPTION</string>
    <string name="category">CATEGORY</string>
    <string name="location">LOCATION</string>
    <string name="type_title_here">Type your title here…</string>
    <string name="enter_percent">Enter the percentage of your discount</string>
    <string name="des_classfield">Describe your classified here</string>
    <string name="coupons_dis">COUPONS / DISCOUNT</string>
    <string name="post">POST</string>
    <string name="type_here">Type here…</string>
    <string name="skip">SKIP</string>
    <string name="chinese">CHINESE</string>
    <string name="english">ENGLISH</string>
    <string name="view">VIEW</string>
    <string name="distance">DISTANCE</string>
    <string name="sort">SORT ORDER</string>
    <string name="Details">DETAILS</string>
    <string name="ReadFullDescription">READ FULL DESCRIPTION</string>
    <string name="Availability">AVAILABILITY</string>
    <string name="Phone">PHONE</string>
    <string name="Fax">FAX</string>
    <string name="Email">Email</string>
    <string name="Web">WEB</string>
    <string name="Comments">COMMENTS</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>
    <string name="home_menu">HOME</string>
    <string name="mess_menu">MESSAGES</string>
    <string name="my_post_menu">MY POSTS</string>
    <string name="favorite_menu">FAVORITES</string>
    <string name="subcrip_menu">SUBSCRIPTIONS</string>
    <string name="setting_menu">SETTINGS</string>
    <string name="logout_menu">LOGOUT</string>
    <string name="login_menu">LOGIN</string>
    <string name="search_here">Search here</string>
    <string-array name="spinner_distance_value">
        <item>WITHIN 1 MILES</item>
        <item>WITHIN 5 MILES</item>
        <item>WITHIN 10 MILES</item>
        <item>WITHIN 25 MILES</item>
        <item>WITHIN 50 MILES</item>
        <item>WITHIN 100 MILES</item>
        <item>WITHIN 250 MILES</item>
        <item>WITHIN 500 MILES</item>
        <item>ALL DISTANCE</item>
    </string-array>
    <string-array name="spinner_sort_value">
        <item>MOST RECENT</item>
        <item>MOST FAVORITE</item>
    </string-array>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="photo">PHOTO</string>
    <string name="password">PASSWORD</string>
    <string name="faq">FAQ</string>
    <string name="invite_friend">INVITE FRIEND</string>
    <string name="more_category">MORE CATEGORY</string>
    <string name="why_dont_sosokan">Why don\'t you sosokan?</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="name">NAME</string>
    <string name="address">ADDRESS</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="zip">ZIP</string>
    <string name="note">NOTE</string>
    <string name="coupons">COUPONS</string>
    <string name="text_all">ALL</string>
    <string name="save">SAVE</string>
    <string name="profile">PROFILE</string>
    <string name="loading">Loading...</string>
    <string name="myProfile">My Profile</string>
    <string name="off_percent">OFF</string>
    <string name="class_field">%d Classifieds</string>
    <string name="invalidate_email">The email address is invalid.</string>
    <string name="invalidate_phone">The phone number you entered is not valid!</string>
    <string name="alert">Alert!</string>
    <string name="error">Error!</string>
    <string name="we_are_sorry">We\'re sorry</string>
    <string name="error_input_user_name">Please enter your name.</string>
    <string name="error_input_phone_number">Please enter phone number.</string>
    <string name="error_input_email">Please enter your email.</string>
    <string name="error_input_description_advertise">Please enter description.</string>
    <string name="error_select_category_advertise">Please select category.</string>
    <string name="error_input_title_advertise">Please enter your post title.</string>
    <string name="error_input_price_advertise">Please add price</string>
    <string name="error_input_discount_advertise">Please enter the percentage of your discount</string>
    <string name="error_select_sub_category_advertise">Please select subcategory</string>
    <string name="error_please_login">Please login</string>
    <string name="your_post_was_not_successful">Your post was not successful!</string>
    <string name="post_successfully">Post Successfully</string>
    <string name="error_upload_image_advertise">Please upload at least one Ad image</string>
    <string name="error_select_email_call_advertise">Please select Email Me and / or Call Me</string>
    <string name="alert_are_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="error_internet">Internet Error. Please Try again!</string>
    <string name="you_need_to_login_your_sosokan">You need to login to your Sosokan account first to use this function!</string>
    <string-array name="list_faq_question">
        <item>Who is Sosokan?</item>
        <item>How do I signup for Sosokan?</item>
        <item>Is Sosokan Free?</item>
        <item>How do I post on Sosokan?</item>
        <item>How can I advertise on Sosokan?</item>
        <item>Will Sosokan publish my personal information?</item>
        <item>How does Sosokan Subscription works?</item>
        <item>How secure is Sosokan?</item>
        <item>Will Sosokan be launch in another language?</item>
        <item>How can I delete a post on Sosokan?</item>
        <item>How do Sosokan process payment between buyer and seller, or customer and merchant?</item>
        <item>How do I report illegal activity on Sosokan?</item>
        <item>How do I edit my user profile on Sosokan?</item>
        <item>Who can I invite to Sosokan?</item>
        <item>How can I share an ad on Sosokan?</item>
        <item>How do I delete my account on Sosokan?</item>
        <item>How do I delete messages on Sosokan?</item>
        <item>Where do I enter password on Sosokan?</item>
        <item>Where can I see all my postings?</item>
        <item>Is Sosokan supported on Android?</item>
        <item>How can I move my listing to the Top?</item>
        <item>Can I add attachment within Chat on Sosokan?</item>
        <item>Can I post on Sosokanapp.com?</item>
        <item>I do not see the category I want on Sosokan?</item>
    </string-array>
    <string name="select_country">Select Country</string>
    <string name="invitation">Invitation</string>
    <string name="facebook">Facebook</string>
    <string name="term_condition">By browsing, signing up or logging in. I here by agree to Sosokan’s</string>
    <string name="term">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login_sign_up">LOGIN/SIGN UP</string>
</resources>