<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/white"
    tools:context=".ui.activity.SplashActivity">

    <LinearLayout
        android:id="@+id/llNavSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBackSplash"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_black_30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:paddingRight="50dp"
            android:text="@string/login_sign_up"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/llNavSignUp"
        android:background="@color/grey" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-40dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/sosokan_icon" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlVerify">

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginTop="-5dp"
            android:layout_toRightOf="@+id/tvSosokan"
            android:text="&#174;"
            android:textColor="@color/dark_grey_range_seek"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSosokan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:paddingLeft="40dp"
            android:text="@string/app_name"
            android:textColor="@color/dark_grey_range_seek"
            android:textSize="40sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/grey"
        android:layout_above="@+id/rlVerify"/>

    <LinearLayout
        android:id="@+id/rlVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnPhoneCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_call_orange_24dp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ExamplePhoneCode"
                android:textColor="@color/black" />

            <View
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/llTextVerify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/VerifyByPhone"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:background="@android:color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/TypeYourPhoneNumber"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_verify"
                android:enabled="false"
                android:text="@string/Verify"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/grey"
        android:layout_below="@+id/rlVerify"/>

    <LinearLayout
        android:id="@+id/llLoginSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="10dp"
            android:text="@string/Or"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnFaceBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                android:background="@drawable/btn_gradient_facebook"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/LoginUsingFacebook"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnWeChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@+id/llTextVerify"
                android:background="@drawable/btn_gradient_wechat"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/LoginUsingWeChat"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/llCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rlNavigationLanguage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibBackLanguage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_back_black_30dp" />

            <TextView
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/select_country"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/grey" />

        <ListView
            android:id="@+id/listCountryView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />
    </LinearLayout>
</RelativeLayout>
