<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBackInviteFriend"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_back_black_30dp" />

        <TextView
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:text="@string/invitation"
            android:textColor="@color/orange"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:minHeight="100dp"
        android:paddingBottom="100dp"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/llInviteFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/ic_fb"
                android:contentDescription="@string/app_name" />



            <LinearLayout
                android:id="@+id/llTextVerify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_keyboard_arrow_right_grey_24dp"
                android:enabled="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>